include/dss_capi.h

    /*
    Array of strings containing names of all Relay elements
    */
    DSS_CAPI_DLL void Relays_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Relays_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Relays_Get_AllNames_GR(void);
    /*
    Number of Relays in circuit
    */
    DSS_CAPI_DLL int32_t Relays_Get_Count(void);
    /*
    Set First Relay active. If none, returns 0.
    */
    DSS_CAPI_DLL int32_t Relays_Get_First(void);
    /*
    Get name of active relay.
    */
    DSS_CAPI_DLL char* Relays_Get_Name(void);
    /*
    Advance to next Relay object. Returns 0 when no more relays.
    */
    DSS_CAPI_DLL int32_t Relays_Get_Next(void);
    /*
    Set Relay active by name
    */
    DSS_CAPI_DLL void Relays_Set_Name(char* Value);
    /*
    Full name of object this Relay is monitoring.
    */
    DSS_CAPI_DLL char* Relays_Get_MonitoredObj(void);
    DSS_CAPI_DLL void Relays_Set_MonitoredObj(char* Value);
    /*
    Number of terminal of monitored element that this Relay is monitoring.
    */
    DSS_CAPI_DLL int32_t Relays_Get_MonitoredTerm(void);
    /*
    Full name of element that will be switched when relay trips.
    */
    DSS_CAPI_DLL char* Relays_Get_SwitchedObj(void);
    DSS_CAPI_DLL void Relays_Set_MonitoredTerm(int32_t Value);
    DSS_CAPI_DLL void Relays_Set_SwitchedObj(char* Value);
    DSS_CAPI_DLL int32_t Relays_Get_SwitchedTerm(void);
    /*
    Terminal number of the switched object that will be opened when the relay trips.
    */
    DSS_CAPI_DLL void Relays_Set_SwitchedTerm(int32_t Value);
    /*
    Get/Set active Relay by index into the Relay list. 1..Count
    */
    DSS_CAPI_DLL int32_t Relays_Get_idx(void);
    /*
    Get/Set Relay active by index into relay list. 1..Count
    */
    DSS_CAPI_DLL void Relays_Set_idx(int32_t Value);